java/versioned_docs/version-1.18/api/class-mouse.mdx
---
id: class-mouse
title: "Mouse"
---
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

The Mouse class operates in main-frame CSS pixels relative to the top-left corner of the viewport.

Every `page` object has its own Mouse, accessible with [Page.mouse()](./api/class-page.mdx#page-mouse).

```java
// Using ‘page.mouse’ to trace a 100x100 square.
page.mouse().move(0, 0);
page.mouse().down();
page.mouse().move(0, 100);
page.mouse().move(100, 100);
page.mouse().move(100, 0);
page.mouse().move(0, 0);
page.mouse().up();
```


- [Mouse.click(x, y[, options])](./api/class-mouse.mdx#mouse-click)
- [Mouse.dblclick(x, y[, options])](./api/class-mouse.mdx#mouse-dblclick)
- [Mouse.down([options])](./api/class-mouse.mdx#mouse-down)
- [Mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move)
- [Mouse.up([options])](./api/class-mouse.mdx#mouse-up)
- [Mouse.wheel(deltaX, deltaY)](./api/class-mouse.mdx#mouse-wheel)

## Mouse.click(x, y[, options]) {#mouse-click}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-x"/> &#60;[double]&#62;<a href="#mouse-click-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-y"/> &#60;[double]&#62;<a href="#mouse-click-option-y" class="list-anchor">#</a>
- `options` &#60;`Mouse.ClickOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#mouse-click-option-button" class="list-anchor">#</a>
  - `setClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-click-option-click-count" class="list-anchor">#</a>
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-option-delay"/> &#60;[double]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-click-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-click-return"/> &#60;[void]&#62;<a href="#mouse-click-return" class="list-anchor">#</a>

Shortcut for [Mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move), [Mouse.down([options])](./api/class-mouse.mdx#mouse-down), [Mouse.up([options])](./api/class-mouse.mdx#mouse-up).

## Mouse.dblclick(x, y[, options]) {#mouse-dblclick}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-x"/> &#60;[double]&#62;<a href="#mouse-dblclick-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-y"/> &#60;[double]&#62;<a href="#mouse-dblclick-option-y" class="list-anchor">#</a>
- `options` &#60;`Mouse.DblclickOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#mouse-dblclick-option-button" class="list-anchor">#</a>
  - `setDelay`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-option-delay"/> &#60;[double]&#62; Time to wait between `mousedown` and `mouseup` in milliseconds. Defaults to 0.<a href="#mouse-dblclick-option-delay" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-dblclick-return"/> &#60;[void]&#62;<a href="#mouse-dblclick-return" class="list-anchor">#</a>

Shortcut for [Mouse.move(x, y[, options])](./api/class-mouse.mdx#mouse-move), [Mouse.down([options])](./api/class-mouse.mdx#mouse-down), [Mouse.up([options])](./api/class-mouse.mdx#mouse-up), [Mouse.down([options])](./api/class-mouse.mdx#mouse-down) and [Mouse.up([options])](./api/class-mouse.mdx#mouse-up).

## Mouse.down([options]) {#mouse-down}
- `options` &#60;`Mouse.DownOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#mouse-down-option-button" class="list-anchor">#</a>
  - `setClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-down-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-down-return"/> &#60;[void]&#62;<a href="#mouse-down-return" class="list-anchor">#</a>

Dispatches a `mousedown` event.

## Mouse.move(x, y[, options]) {#mouse-move}
- `x`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-x"/> &#60;[double]&#62;<a href="#mouse-move-option-x" class="list-anchor">#</a>
- `y`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-y"/> &#60;[double]&#62;<a href="#mouse-move-option-y" class="list-anchor">#</a>
- `options` &#60;`Mouse.MoveOptions`&#62;
  - `setSteps`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-option-steps"/> &#60;[int]&#62; defaults to 1. Sends intermediate `mousemove` events.<a href="#mouse-move-option-steps" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-move-return"/> &#60;[void]&#62;<a href="#mouse-move-return" class="list-anchor">#</a>

Dispatches a `mousemove` event.

## Mouse.up([options]) {#mouse-up}
- `options` &#60;`Mouse.UpOptions`&#62;
  - `setButton`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-button"/> &#60;`enum MouseButton { LEFT, RIGHT, MIDDLE }`&#62; Defaults to `left`.<a href="#mouse-up-option-button" class="list-anchor">#</a>
  - `setClickCount`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-option-click-count"/> &#60;[int]&#62; defaults to 1. See [UIEvent.detail].<a href="#mouse-up-option-click-count" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-up-return"/> &#60;[void]&#62;<a href="#mouse-up-return" class="list-anchor">#</a>

Dispatches a `mouseup` event.

## Mouse.wheel(deltaX, deltaY) {#mouse-wheel}
- `deltaX`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-x"/> &#60;[double]&#62; Pixels to scroll horizontally.<a href="#mouse-wheel-option-delta-x" class="list-anchor">#</a>
- `deltaY`<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-option-delta-y"/> &#60;[double]&#62; Pixels to scroll vertically.<a href="#mouse-wheel-option-delta-y" class="list-anchor">#</a>
- returns:<a aria-hidden="true" tabindex="-1" class="list-anchor-link" id="mouse-wheel-return"/> &#60;[void]&#62;<a href="#mouse-wheel-return" class="list-anchor">#</a>

Dispatches a `wheel` event.

:::note
Wheel events may cause scrolling if they are not handled, and this method does not wait for the scrolling to finish before returning.
:::


[APIRequest]: ./api/class-apirequest.mdx "APIRequest"
[APIRequestContext]: ./api/class-apirequestcontext.mdx "APIRequestContext"
[APIResponse]: ./api/class-apiresponse.mdx "APIResponse"
[APIResponseAssertions]: ./api/class-apiresponseassertions.mdx "APIResponseAssertions"
[Browser]: ./api/class-browser.mdx "Browser"
[BrowserContext]: ./api/class-browsercontext.mdx "BrowserContext"
[BrowserType]: ./api/class-browsertype.mdx "BrowserType"
[ConsoleMessage]: ./api/class-consolemessage.mdx "ConsoleMessage"
[Dialog]: ./api/class-dialog.mdx "Dialog"
[Download]: ./api/class-download.mdx "Download"
[ElementHandle]: ./api/class-elementhandle.mdx "ElementHandle"
[FileChooser]: ./api/class-filechooser.mdx "FileChooser"
[FormData]: ./api/class-formdata.mdx "FormData"
[Frame]: ./api/class-frame.mdx "Frame"
[FrameLocator]: ./api/class-framelocator.mdx "FrameLocator"
[JSHandle]: ./api/class-jshandle.mdx "JSHandle"
[Keyboard]: ./api/class-keyboard.mdx "Keyboard"
[Locator]: ./api/class-locator.mdx "Locator"
[LocatorAssertions]: ./api/class-locatorassertions.mdx "LocatorAssertions"
[Mouse]: ./api/class-mouse.mdx "Mouse"
[Page]: ./api/class-page.mdx "Page"
[PageAssertions]: ./api/class-pageassertions.mdx "PageAssertions"
[Playwright]: ./api/class-playwright.mdx "Playwright"
[PlaywrightAssertions]: ./api/class-playwrightassertions.mdx "PlaywrightAssertions"
[PlaywrightException]: ./api/class-playwrightexception.mdx "PlaywrightException"
[Request]: ./api/class-request.mdx "Request"
[RequestOptions]: ./api/class-requestoptions.mdx "RequestOptions"
[Response]: ./api/class-response.mdx "Response"
[Route]: ./api/class-route.mdx "Route"
[Selectors]: ./api/class-selectors.mdx "Selectors"
[TimeoutError]: ./api/class-timeouterror.mdx "TimeoutError"
[Touchscreen]: ./api/class-touchscreen.mdx "Touchscreen"
[Tracing]: ./api/class-tracing.mdx "Tracing"
[Video]: ./api/class-video.mdx "Video"
[WebSocket]: ./api/class-websocket.mdx "WebSocket"
[WebSocketFrame]: ./api/class-websocketframe.mdx "WebSocketFrame"
[Worker]: ./api/class-worker.mdx "Worker"
[Element]: https://developer.mozilla.org/en-US/docs/Web/API/element "Element"
[EvaluationArgument]: ./evaluating.mdx#evaluation-argument "EvaluationArgument"
[Promise]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise "Promise"
[iterator]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Iteration_protocols "Iterator"
[origin]: https://developer.mozilla.org/en-US/docs/Glossary/Origin "Origin"
[selector]: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Selectors "selector"
[Serializable]: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify#Description "Serializable"
[UIEvent.detail]: https://developer.mozilla.org/en-US/docs/Web/API/UIEvent/detail "UIEvent.detail"
[UnixTime]: https://en.wikipedia.org/wiki/Unix_time "Unix Time"
[xpath]: https://developer.mozilla.org/en-US/docs/Web/XPath "xpath"

[boolean]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "boolean"
[byte&#91;&#93;]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "byte[]"
[Consumer]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Consumer.html "Consumer"
[double]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "double"
[InputStream]: https://docs.oracle.com/javase/8/docs/api/java/io/InputStream.html "InputStream"
[int]: https://docs.oracle.com/javase/tutorial/java/nutsandbolts/datatypes.html "int"
[List]: https://docs.oracle.com/javase/8/docs/api/java/util/List.html "List"
[Map]: https://docs.oracle.com/javase/8/docs/api/java/util/Map.html "Map"
[null]: https://docs.oracle.com/javase/specs/jls/se8/html/jls-3.html#jls-3.10.7 "null"
[Object]: https://docs.oracle.com/javase/8/docs/api/java/lang/Object.html "Object"
[Path]: https://docs.oracle.com/javase/8/docs/api/java/nio/file/Path.html "Path"
[Pattern]: https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html "Pattern"
[Predicate]: https://docs.oracle.com/javase/8/docs/api/java/util/function/Predicate.html "Predicate"
[void]: https://docs.oracle.com/javase/tutorial/java/javaOO/methods.html "void"
[Runnable]: https://docs.oracle.com/javase/8/docs/api/java/lang/Runnable.html "Runnable"
[RuntimeException]: https://docs.oracle.com/javase/8/docs/api/java/lang/RuntimeException.html "RuntimeException"
[String]: https://docs.oracle.com/javase/8/docs/api/java/lang/String.html "String"

[all available image tags]: https://mcr.microsoft.com/v2/playwright/java/tags/list "all available image tags"
[Docker Hub]: https://hub.docker.com/_/microsoft-playwright-java "Docker Hub"
[Dockerfile.focal]: https://github.com/microsoft/playwright-java/blob/master/Dockerfile.focal "Dockerfile.focal"
